Mon, 25 Feb 2008 15:51:16 +0100 <thp@perli.net>
Show more description text in episode list

	* src/gpodder/libpodcasts.py: Join all lines and strip unnecessary
	data for the episode description that is displayed in the episode list
	when descriptions are enabled (suggested by Jérôme Chabod)

Mon, 25 Feb 2008 14:39:15 +0100 <thp@perli.net>
Merge changes from 0.11.0 release after release

	* bin/gpodder: Merge changes from 0.11.0
	* README: Merge changes from 0.11.0

Sun, 24 Feb 2008 14:52:04 +0100 <thp@perli.net>
Cosmetic changes to the makefile

	* Makefile: Cosmetic changes

Sun, 24 Feb 2008 13:55:42 +0100 <thp@perli.net>
Cairo-based progress bar on system tray icon

	* src/gpodder/draw.py: Add Cairo-based drawing code for generating a
	nice, transparent progress bar icon
	* src/gpodder/services.py: Fix a problem with the wrong download done
	percentage (i.e. when cancelling downloads instead of finishing them)
	* src/gpodder/trayicon.py: Add code to draw the progress bar on the
	tray icon; initial idea and most parts of this patch by Jérôme Chabod

Sat, 23 Feb 2008 14:18:53 +0100 <thp@perli.net>
Set the xterm title when running "make test"

	* Makefile: Set the xterm title when running "make test"

Wed, 20 Feb 2008 13:38:58 +0100 <thp@perli.net>
Estimated time left and synchronization support for tray icon by Jérôme Chabod

	* src/gpodder/gui.py: Send update status information to the tray icon
	on update; add glue code for synchronization device and tray icon
	* src/gpodder/trayicon.py: Add status and tooltip during device
	synchronization; add estimated download time to tooltip during
	download; set the correct caption for the synchronization menu item in
	the tray icon (and don't add a synchronize menu item when not needed);
	some small code-cleanups and fixes
	* src/gpodder/util.py: Add format_seconds_to_hour_min_sec() function
	that converts a numeric amount of seconds into a human-readable string

Tue, 19 Feb 2008 07:46:28 +0100 <thp@perli.net>