@@ -59,7 +59,7 @@
  Additional dependencies if you want Bluetooth file send support:
 
    * python-bluez OR hcitool (for detecting nearby devices)
-   * gnome-obex-send (for the file send operation)
+   * gnome-obex-send OR bluetooth-sendto (for the file send operation)
 
  Additional dependencies if you want to install from source:
  
